@@ -26,31 +26,32 @@
          <export name="*"/>
       </library>
 
-      <library name="apache-mime4j-0.6.jar"/>
+      <library name="apache-mime4j-core-0.7.jar"/>
+      <library name="apache-mime4j-dom-0.7.jar"/>
       <library name="asm-3.1.jar"/>
       <library name="bcmail-jdk15-1.45.jar"/>
       <library name="bcprov-jdk15-1.45.jar"/>
       <library name="boilerpipe-1.1.0.jar"/>
-      <library name="commons-codec-1.2.jar"/>
+      <library name="commons-codec-1.4.jar"/>
       <library name="commons-compress-1.1.jar"/>
       <library name="commons-httpclient-3.1.jar"/>
       <library name="commons-logging-1.1.1.jar"/>
       <library name="dom4j-1.6.1.jar"/>
-      <library name="fontbox-1.4.0.jar"/>
+      <library name="fontbox-1.6.0.jar"/>
       <library name="geronimo-stax-api_1.0_spec-1.0.1.jar"/>
       <library name="jdom-1.0.jar"/>
-      <library name="jempbox-1.4.0.jar"/>
+      <library name="jempbox-1.6.0.jar"/>
       <library name="metadata-extractor-2.4.0-beta-1.jar"/>
       <library name="netcdf-4.2-min.jar"/>
-      <library name="pdfbox-1.4.0.jar"/>
-      <library name="poi-3.7.jar"/>
-      <library name="poi-ooxml-3.7.jar"/>
-      <library name="poi-ooxml-schemas-3.7.jar"/>
-      <library name="poi-scratchpad-3.7.jar"/>
+      <library name="pdfbox-1.6.0.jar"/>
+      <library name="poi-3.8-beta4.jar"/>
+      <library name="poi-ooxml-3.8-beta4.jar"/>
+      <library name="poi-ooxml-schemas-3.8-beta4.jar"/>
+      <library name="poi-scratchpad-3.8-beta4.jar"/>
       <library name="rome-0.9.jar"/>
       <library name="slf4j-api-1.5.6.jar"/>
-      <library name="tagsoup-1.2.jar"/>
-      <library name="tika-parsers-0.9.jar"/>
+      <library name="tagsoup-1.2.1.jar"/>
+      <library name="tika-parsers-0.10.jar"/>
       <library name="xmlbeans-2.3.0.jar"/>
    </runtime>
 
